# human-eval-Rust

./: .flake8  .gitignore  .version-workflow.md  Dockerfile.eval  MANIFEST.in  NO_DOCKER_MIGRATION_PLAN.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.hypothesis/constants/: 0b102241c999dadb  0edeac5249c04504  1432c4f5a89ff74e  930d1353ff6b49ee  a363f318dc4ce27b  cdb9fbb4ed98d5d2
.hypothesis/examples/04e6b3400353b141/: 9f7e78edb922d3f8  c1147f8d7ffad41f  f9d3fa8dc943bd5a
.hypothesis/examples/c1147f8d7ffad41f/: fdd71562c26b7cb6
data/: HumanEval_rust.jsonl  HumanEval_rust.jsonl.backup.20251130_083703  HumanEval_rust_extended.jsonl  __init__.py  example_rust_problem.jsonl  example_rust_samples.jsonl  manifest.json  sigil_phase2_dataset_sample.jsonl
docs/: DOCUMENTATION_SUMMARY_v2.5.0.md  ECOSYSTEM_INTEGRATION.md  SECURITY.md  SETUP.md  TESTING_CI_LOCALLY.md
docs/adr/: ADR-001-firejail-first-sandboxing.md  ADR-002-pattern-based-security.md  ADR-003-thread-safe-timeout.md  ADR-004-enhanced-result-schema.md  ADR-005-deterministic-compilation.md  ADR-006-unicode-homoglyph-protection.md  ADR-007-sigilderg-pipeline-integration.md  ADR-008-separate-timeout-budgets.md  ADR-009-clippy-integration-enforcement.md  ADR-010-enhanced-dependency-detection.md  ADR-011-context-aware-security-filtering.md  ADR-012-windows-path-length-compatibility.md  README.md  template.md
docs/runbooks/: README.md  evaluation-execution.md  large-scale-evaluation.md  sigil-pipeline-ingestion.md  troubleshooting.md
human_eval/: __init__.py  data.py  evaluate_functional_correctness.py  evaluation.py  execution.py  logging_config.py  resource_monitor.py  rust_execution.py  sandbox.py  sigil_ingest.py  workspace_scaffold.py
scripts/: generate_extended_dataset.py  migrate_task_ids.py  process_sigil_dataset.py
tests/: __init__.py  conftest.py  test_data.py  test_evaluation.py  test_integration.py  test_properties.py  test_resilience.py  test_rust_execution.py  test_sandbox.py  test_security.py  test_sigil_ingest.py
