[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "human-eval-rust"
version = "1.3.6"
description = "Evaluation harness for the HumanEval Rust problem solving dataset"
readme = "README.md"
requires-python = ">=3.12.10"
license = "MIT"
authors = [
    {name = "Dave Tofflemire", email = "davetmire85@gmail.com"},
]
maintainers = [
    {name = "Dave Tofflemire", email = "davetmire85@gmail.com"},
]
keywords = ["evaluation", "rust", "code", "llm", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tqdm>=4.65.0",
    "fire>=0.5.0",
    "numpy>=1.24.0",
    "termcolor>=3.2.0",
]

[project.optional-dependencies]
flash-attn = [
    "flash-attn>=2.5.0",
]
ecosystem = [
    "sigil-pipeline>=1.2.0",
    "sigilderg-finetuner>=2.8.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
evaluate_functional_correctness = "human_eval.evaluate_functional_correctness:main"

[project.urls]
"Related Projects" = "https://github.com/Superuser666-Sigil"
"Pipeline" = "https://github.com/Superuser666-Sigil/SigilDERG-Data_Production"
"Finetuner" = "https://github.com/Superuser666-Sigil/SigilDERG-Finetuner"
"Evaluation" = "https://github.com/Superuser666-Sigil/human-eval-Rust"

[tool.setuptools]
packages = ["human_eval"]

[tool.setuptools.package-data]
"*" = ["../data/*.jsonl"]

[tool.basedpyright]
venvPath = "D:\\SigilDERG-Data_Production"
venv = ".venv"
reportMissingImports = true

