[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "human-eval-rust"
version = "2.3.0"
description = "Evaluation harness for the HumanEval Rust problem solving dataset"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Dave Tofflemire", email = "davetmire85@gmail.com"},
]
maintainers = [
    {name = "Dave Tofflemire", email = "davetmire85@gmail.com"},
]
keywords = ["evaluation", "rust", "code", "llm", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tqdm>=4.65.0",
    "fire>=0.5.0",
    "numpy>=1.24.0",
    "termcolor>=3.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
flash-attn = [
    "flash-attn>=2.5.0",
]
ecosystem = [
    "sigil-pipeline>=2.3.0",
    "sigilderg-finetuner>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "mypy>=1.5.0",
    # Property-based testing
    "hypothesis>=6.92.0",
    # Mutation testing
    "mutmut>=3.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.92.0",
]

[project.scripts]
evaluate_functional_correctness = "human_eval.evaluate_functional_correctness:main"

[project.urls]
"Related Projects" = "https://github.com/Superuser666-Sigil"
"Pipeline" = "https://github.com/Superuser666-Sigil/SigilDERG-Data_Production"
"Finetuner" = "https://github.com/Superuser666-Sigil/SigilDERG-Finetuner"
"Evaluation" = "https://github.com/Superuser666-Sigil/human-eval-Rust"

[tool.setuptools]
packages = ["human_eval"]

[tool.setuptools.package-data]
"*" = ["../data/*.jsonl"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E501", "W503"]
exclude = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "security: marks tests as security-focused tests",
    "resilience: marks tests as chaos engineering/resilience tests",
    "property: marks tests as property-based tests",
    "windows_only: marks tests that only run on Windows",
    "unix_only: marks tests that only run on Unix-like systems",
]

[tool.coverage.run]
source = ["human_eval"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/.env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mutmut]
paths_to_mutate = "human_eval/"
tests_dir = "tests/"
runner = "python -m pytest"

[tool.basedpyright]
venvPath = "D:\\SigilDERG-Data_Production"
venv = ".venv"
reportMissingImports = true

